Migrate server to Next.js

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "@tailwindcss/cli": "^4.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
+    "node-cache": "^5.1.2",
     "os-browserify": "^0.3.0",
     "path": "^0.12.7",
     "react": "^19.1.0",
